force-app/main/default/objects/Visit_Product_Detail__c/Visit_Product_Detail__c.object-meta.xml
<CustomObject>
    <label>Visit Product Detail</label>
    <nameField>
        <displayFormat>VPD-{00000}</displayFormat>
        <label>Visit Product Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Product Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>