force-app/main/default/objects/Visit_Product_Detail__c/fields/Detail_Type__c.field-meta.xml
<CustomField>
    <fullName>Detail_Type__c</fullName>
    <label>Detail Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Detail</fullName>
                <default>true</default>
                <label>Detail</label>
            </value>
            <value>
                <fullName>Reprint</fullName>
            </value>
            <value>
                <fullName>Reminder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>