force-app/main/default/objects/Visit_Product_Detail__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Visit Product Details</relationshipLabel>
    <relationshipName>Visit_Product_Details</relationshipName>
    <type>Lookup</type>
</CustomField>